[package]
name = "peekable"
version = "0.2.3"
edition = "2021"
repository = "https://github.com/al8n/peekable"
homepage = "https://github.com/al8n/peekable"
documentation = "https://docs.rs/peekable"
description = "Peekable reader and async reader, which enhance your network programming experience."
license = "MIT OR Apache-2.0"
rust-version = "1.56"
keywords = ["peek", "io", "async", "tokio", "futures"]
categories = ["asynchronous", "network-programming", "development-tools"]

[features]
default = ["smallvec"]
future = ["futures-util", "pin-project-lite"]
tokio = ["dep:tokio", "pin-project-lite", "bytes"]

[dependencies]
smallvec = { version = "1", optional = true }

futures-util = { version = "=0.3.31", optional = true, features = ["io"] }
pin-project-lite = { version = "0.2", optional = true }

tokio = { version = "1", default-features = false, optional = true, features = ["io-util"] }
bytes = { version = "1", optional = true }


[dev-dependencies]
futures = { version = "0.3", features = ["executor"] }
tokio = { version = "1", features = ["full"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
